--- a/pom.xml
+++ b/pom.xml
@@ -27,41 +27,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+<distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>a0upbitjbwiyn-artifactory-primary-0-releases</name>
+        <url>https://devopsjob.jfrog.io/artifactory/iwayq-libs-release-local</url>
+    </repository>
 
-  <build>
-    <finalName>webapp-project</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>a0upbitjbwiyn-artifactory-primary-0-snapshots</name>
+        <url>https://devopsjob.jfrog.io/artifactory/iwayq-libs-snapshot-local</url>
+    </snapshotRepository>
+</distributionManagement>
 </project>
